add documentation to demo

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1,14 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
    "source": [
-    "\n"
+    "# Random tensors with marginal covariance constraints\n",
+    "In this demo, I demonstrate how to generate random tensor with marginal specified marginal covariances at different tensor code. If one have different types of variables that cooexist, one can model such data with a tensor. For example, if one have data with the types of variables time and space this data can be compined in a tensor with two modes (i.e., a matrix). If further, there are known covariance structure along the time mode and the space mode, one may use this package to test for structure beyond the known correlation structure."
    ]
   },
   {
@@ -40,7 +39,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Specify covariance constraints for a tensor of dimensionality 6"
+    "# Specify covariance constraints for a tensor\n",
+    "Here I simulated known covarainces of a data with 6 type of variables (modeled as tensor with 6 modes)  "
    ]
   },
   {
@@ -56,7 +56,7 @@
     "sizes = nprnd.randint(10, size = nmodes)+1\n",
     "# specify covariance constraints\n",
     "# genarate marginal covariance matrices of size specified in dim\n",
-    "covConst = []\n",
+    "margCovs = []\n",
     "eigenValuesTruelist = []\n",
     "eigenVectorsTruelist = []\n",
     "scale = nprnd.randint(10)+1\n",
@@ -65,19 +65,19 @@
     "    eigValues = abs(nprnd.randn(sizes[i]))\n",
     "    eigValues = scale*(eigValues/np.sum(eigValues))\n",
     "    Sigma = np.dot(np.dot(eigVectors, np.diag(eigValues)), eigVectors.T)\n",
-    "    covConst.append(Sigma)\n",
+    "    margCovs.append(Sigma)\n",
     "    eigenValuesTruelist.append(eigValues)\n",
     "    eigenVectorsTruelist.append(eigVectors)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Utility functions"
+   ]
   },
   {
    "cell_type": "code",
@@ -87,6 +87,25 @@
    },
    "outputs": [],
    "source": [
+    "'''\n",
+    "#___________________________________________________________________________\n",
+    "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "% This function evaluates the efficient multiplication of matrix (A) that\n",
+    "% has kronecker product structure A = kron(An, ...., A2, A1) by a vector \n",
+    "% (b). This is the algorithm one from:\n",
+    "% Scaling multidimensional inference for structured Gaussian processes\n",
+    "% E Gilboa, Y SaatÁi, JP Cunningham - Pattern Analysis and Machine \n",
+    "% Intelligence, IEEE ?, 2015\n",
+    "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "% Inputs:\n",
+    "%       - As: is a list where each element contains the matrices\n",
+    "%       A1,A2,...An\n",
+    "%       - b: a vector.\n",
+    "% Outputs:\n",
+    "%       - x: is the result of matrix vector product between A and b\n",
+    "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "'''\n",
     "\n",
     "def kron_mvprod(As, b):\n",
     "    x = b\n",
@@ -111,6 +130,20 @@
    },
    "outputs": [],
    "source": [
+    "'''\n",
+    "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "% This function evaluates the efficient evaluation of kronecker (tensor) \n",
+    "% sums of diagonal matrices.\n",
+    "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "% Inputs:\n",
+    "%       - Ds: is a list where each element contains the diagonal elements\n",
+    "%       of each matrix.\n",
+    "% Outputs:\n",
+    "%       - kronSumLs: is the result of Dn \\kronsum Dn-1 .....\\kronsum D1\n",
+    "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "'''\n",
+    "\n",
     "def diagKronSum(Ds):\n",
     "    nmodes = len(Ds)\n",
     "    kronSumDs = np.zeros(1)\n",
@@ -129,24 +162,20 @@
    },
    "outputs": [],
    "source": [
-    "#%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
-    "#% <tensorMaxEntropy>\n",
-    "#% Copyright (C) 2016 Gamaleldin F. Elsayed and John P. Cunningham \n",
-    "#%       (see full notice in README)\n",
-    "#%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
-    "#% sumA = sumTensor(A, sumDim)\n",
-    "#%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
-    "#% This function evaluates the sum of tensor at specific dimensions\n",
-    "#%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
-    "#% Inputs:\n",
-    "#%       - A: is the input n-dimesnional tensor\n",
-    "#%       - sumDim: the dimensions to sum over.\n",
-    "#% Outputs:\n",
-    "#%       - sumA: an n-dimensional tensor of the sum of tensor A at the \n",
-    "#%       specified dimensions. The dimensions specified by sumDim will be of\n",
-    "#%       size 1.\n",
-    "#%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
-    "#%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "'''\n",
+    "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "% This function evaluates the sum of tensor at specific dimensions\n",
+    "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "% Inputs:\n",
+    "%       - A: is the input n-dimesnional tensor\n",
+    "%       - sumDim: the dimensions to sum over.\n",
+    "% Outputs:\n",
+    "%       - sumA: an n-dimensional tensor of the sum of tensor A at the \n",
+    "%       specified dimensions. The dimensions specified by sumDim will be of\n",
+    "%       size 1.\n",
+    "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "'''\n",
     "\n",
     "def sumTensor(T, sumDim):\n",
     "    sumT = T\n",
@@ -157,17 +186,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "'''\n",
+    "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "% This function evaluates the log transformed objective function of the\n",
+    "% maximum entropy covariance eigenvalues \n",
+    "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "% Inputs:\n",
+    "%       - logL: is the vector of the stacked log transformed \n",
+    "%         eigenvalues of the lagrangian matrices\n",
+    "%       - logEigValues: list with each element containing the vector of\n",
+    "%         log transformed eigenvalues of the specified marginal covariance \n",
+    "%         matrices.\n",
+    "% Outputs:\n",
+    "%       - f: is the log transformed objective cost function evaluated at \n",
+    "%         the input vector logL.\n",
+    "%       - gradf_logL: is the gradient of the log transformed objective cost\n",
+    "%         function evaluated at the input vector logL. This gradient is\n",
+    "%         taken with respect of the log tramsformed latent of the\n",
+    "%         lagrangian matrices eigenvalues (logL).\n",
+    "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "'''\n",
     "def logObjectiveMaxEntropyTensor(logL, params):\n",
     "    Lagrangians = []\n",
     "    for x in params.tensorIxs:\n",
     "        Lagrangians.append(np.exp(logL[np.add(sum(params.sizes[0:x]),range(int(params.sizes[x])))]))\n",
-    "############ building blocks of the gradient ###########\n",
+    "    ############ building blocks of the gradient ###########\n",
     "    LsTensor = diagKronSum(Lagrangians)\n",
     "    LsTensor = np.reshape(LsTensor, tuple(params.sizes), order='F')                                 # kronecker sum of the lagrangian matrices eigenvalues\n",
     "    invLsTensor = 1.0/LsTensor                                            # elementwise inverse of the above\n",
@@ -186,7 +236,7 @@
     "    f = sum(np.vstack(fx))/params.normalizeTerm\n",
     "\n",
     "\n",
-    "############ build the gradient from the blocks ###########\n",
+    "    ############ build the gradient from the blocks ###########\n",
     "    for x in params.tensorIxs:\n",
     "        nxSet = list(set(params.tensorIxs).difference(set([x])))\n",
     "        gradfx_logLx = np.reshape(((2*Er[x]/sumTensor(invLsTensor, nxSet))*sumTensor(invSquareLsTensor, nxSet)),tuple([params.sizes[x],1]), order='F')*np.reshape(Lagrangians[x], tuple([params.sizes[x],1]), order='F')\n",
@@ -200,7 +250,7 @@
     "        gradf_logL[np.add(sum(params.sizes[0:x]),range(int(params.sizes[x])))] = gradf_logLx\n",
     "    \n",
     "    gradf_logL = gradf_logL/params.normalizeTerm  \n",
-    "############ return ###########\n",
+    "    ############ return ###########\n",
     "    return f, gradf_logL\n",
     "\n",
     "        \n",
@@ -210,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -370,12 +420,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "'''\n",
+    "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "% This function solves for the eigenvalues of the covariance matrix of the\n",
+    "% maximum entropy distribution with specified eigenvalues of the marginal \n",
+    "% covariance matrices\n",
+    "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "% Inputs:\n",
+    "%       - eigValues: list with each element containing the vector of\n",
+    "%         eigenvalues of the specified marginal covariance matrices.\n",
+    "%       - maxIter: maximum number of allowed iterations.\n",
+    "%       - figFlg: if true a figure will be generated to display optimization summary.\n",
+    "% Outputs:\n",
+    "%       - Lagrangians: is the list eigenvalues of the largrangian\n",
+    "%                multipliers of the optimization program\n",
+    "%       - cost: final cost value\n",
+    "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "'''    \n",
+    "\n",
     "def optMaxEntropy(eigValues, maxIter, figFlg):\n",
     "#  if the marginal covariances are low rank then the number of variables \n",
     "#  that we solve for are less. If full rank the number of variables that we \n",
@@ -437,80 +506,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:92: RuntimeWarning:invalid value encountered in sqrt\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error in estimated marginal covariance of mode 0, empirically estimated from samples, is 0.21 %\n",
-      "Error in estimated marginal covariance of mode 1, empirically estimated from samples, is 0.67 %\n",
-      "Error in estimated marginal covariance of mode 2, empirically estimated from samples, is 0.89 %\n",
-      "Error in estimated marginal covariance of mode 3, empirically estimated from samples, is 0.51 %\n",
-      "Error in estimated marginal covariance of mode 4, empirically estimated from samples, is 0.93 %\n",
-      "Error in estimated marginal covariance of mode 5, empirically estimated from samples, is 0.27 %\n"
-     ]
-    }
-   ],
    "source": [
-    "t = randTensors(sizes)\n",
-    "t.fitMaxEntropy(covConst)\n",
-    "ts = t.sampleTensors(10)"
+    "## Create random tensor class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "print ts[0].shape\n",
-    "t.samplingError(ts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "class randTensors:\n",
+    "from itertools import chain\n",
+    "import numpy as np\n",
+    "from numpy import random as nprnd\n",
+    "from scipy import linalg as sciLA\n",
+    "\n",
+    "\n",
+    "\n",
+    "class randtensor:\n",
+    "    '''\n",
+    "    tensor class that takes an input, which is the size of different tensor modes\n",
+    "    \n",
+    "    '''\n",
     "    def __init__(self, sizes):\n",
     "        self.sizes = sizes;\n",
-    "        self.marginalCov = [];\n",
     "        self.nmodes = len(sizes);\n",
     "        self.margCovs = [];                            # marginal Covariances of the distribution\n",
     "        self.margEigVectors = [];                        # eigenvectors of the marginal Covariances of the distribution\n",
@@ -543,7 +568,9 @@
     "            margEigValues += [s];\n",
     "            margEigVectors += [Q];\n",
     "        return margEigValues, margEigVectors\n",
-    "    \n",
+    "    '''\n",
+    "    class function that fits maximum entropy distribution with covariances specified in margCovs list\n",
+    "    '''\n",
     "    def fitMaxEntropy(self, margCovs):\n",
     "        margEigValues, margEigVectors = self.margEig(margCovs);\n",
     "        maxIter = 1000;\n",
@@ -555,7 +582,11 @@
     "        self.margCovs = margCovs;\n",
     "        self.margEigValues = margEigValues;\n",
     "        self.margEigVectors = margEigVectors;\n",
-    "        \n",
+    "    \n",
+    "    '''\n",
+    "    class function that samples tensors (number of tensors is specified as an input) \n",
+    "    with the marginal covariance constraints.\n",
+    "    '''\n",
     "    def sampleTensors(self, nsamples):\n",
     "        vecTensors = np.zeros([np.prod(self.sizes), nsamples]);\n",
     "        for i in range(nsamples):\n",
@@ -564,11 +595,12 @@
     "        vecTensors = np.real(kron_mvprod(self.margEigVectors, vecTensors))\n",
     "        tensors = []\n",
     "        for i in range(nsamples):\n",
-    "            tensors += [np.reshape(vecTensors[:,i], tuple(self.sizes), order = 'F')]\n",
-    "        \n",
-    "        _ = self.samplingError(tensors)\n",
+    "            tensors += [np.reshape(vecTensors[:,i], tuple(self.sizes), order = 'F')]        \n",
     "        return tensors\n",
     "    \n",
+    "    '''\n",
+    "    Compute the marginal covariances empirically a list of tensors specified as an input\n",
+    "    '''\n",
     "    def empiricalMargCovs(self, tensors):\n",
     "        nsamples = len(tensors)\n",
     "        M =  self.empiricalMean(tensors)\n",
@@ -581,7 +613,6 @@
     "\n",
     "        for j in range(nsamples):\n",
     "            tensor = tensors[j]-M\n",
-    "            marginalCovs = []\n",
     "            for i in allDim:\n",
     "                niSet = list(set(allDim) - set([i]))\n",
     "                z = np.reshape(np.transpose(tensor, list(chain.from_iterable([[i], niSet]))), tuple([sizes[i], np.prod(sizes[niSet])]), order = 'F')\n",
@@ -590,6 +621,10 @@
     "            estMargCov[i] = (estMargCov[i])\n",
     "        return estMargCov\n",
     "    \n",
+    "\n",
+    "    '''\n",
+    "    Compute the mean tensor from a list of tensors specified as an input\n",
+    "    '''\n",
     "    def empiricalMean(self, tensors):\n",
     "        nsamples = len(tensors);\n",
     "        M = tensors[0]/nsamples\n",
@@ -597,6 +632,11 @@
     "            M = M+tensors[i+1]/nsamples\n",
     "        return M\n",
     "    \n",
+    "    '''\n",
+    "    Compute the sampling error, defined as the square difference between the \n",
+    "    class marginal covariances and the empirical estimated from a list of tensors \n",
+    "    specified as an input\n",
+    "    '''\n",
     "    def samplingError(self, tensors):\n",
     "        nsamples = len(tensors);\n",
     "        estMargCov = self.empiricalMargCovs(tensors);\n",
@@ -604,8 +644,80 @@
     "        for i in range(self.nmodes):\n",
     "            error += [(sciLA.norm(estMargCov[i]-self.margCovs[i], 'fro')/sciLA.norm(self.margCovs[i], 'fro'))**2*100];\n",
     "            print \"Error in estimated marginal covariance of mode %d, empirically estimated from samples, is %.2f %%\" \\\n",
-    "            %(i, error[i])\n"
+    "            %(i, error[i])\n",
+    "        return error\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "## Sampling random tensors\n",
+    "Here I sample random tensors with the specified marginal covariances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:92: RuntimeWarning:invalid value encountered in sqrt\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = randtensor(sizes)   # create tensor class\n",
+    "t.fitMaxEntropy(margCovs) #fit maximum entropy distribution with the known marginal covariances\n",
+    "ts = t.sampleTensors(50) # sample 50 tensors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Error in marginal covariance (This error is primarily finite sampling error; i.e., it goes to zero as you have more tensors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error in estimated marginal covariance of mode 0, empirically estimated from samples, is 0.17 %\n",
+      "Error in estimated marginal covariance of mode 1, empirically estimated from samples, is 0.24 %\n",
+      "Error in estimated marginal covariance of mode 2, empirically estimated from samples, is 0.06 %\n",
+      "Error in estimated marginal covariance of mode 3, empirically estimated from samples, is 0.01 %\n",
+      "Error in estimated marginal covariance of mode 4, empirically estimated from samples, is 0.07 %\n",
+      "Error in estimated marginal covariance of mode 5, empirically estimated from samples, is 0.00 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "error = t.samplingError(ts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
